Remove Mod button and Add polarity (+/-) - Add ability to use decimal point and disable decimal button if already decimal - Add all Math operations to JS file but need to link funtionality with operations buttons - Add ability to enable button when 'clr' button is clicked - Add ability to enable button if 'Del' button deletes dcimal point

--- a/index.html
+++ b/index.html
@@ -26,25 +26,25 @@
             <button id="clear">clr</button> 
             <button id="delete">Del</button>
             <button class="operation" id="percent">%</button>
-            <button class="operation" id="mod">mod</button>
+            <button class="operation" id="log">log</button>
             
             <!-- 3rd row -->
             <button class="operation" id="exponent">x&#x02B8;</button>
             <button class="operation" id="factorial">x!</button>
             <button class="operation" id="squareroot">&Sqrt;</button>
-            <button class="operation" id="log">log</button>
+            <button class="operation" id="divide">÷</button>
 
             <!-- 4th row -->
             <button class="number" data-key="55" data-number>7</button>
             <button class="number" data-key="56">8</button>
             <button class="number" data-key="57">9</button>
-            <button class="operation" id="divide">÷</button>
+            <button class="operation" id="multiply">×</button>
   
             <!-- 5th row -->
             <button class="number" data-key="52">4</button>
             <button class="number" data-key="53">5</button>
             <button class="number" data-key="54">6</button>
-            <button class="operation" id="multiply">×</button>
+            <button class="operation" id="add">+</button>
   
             <!-- 6th row -->
             <button class="number" data-key="49">1</button>
@@ -53,9 +53,9 @@
             <button class="operation" id="subtract">−</button>
  
             <!-- 7th row -->
-            <button id="decimal">.</button>
+            <button id="polarity">+/-</button>
             <button class="number" data-key="48">0</button>
-            <button class="operation" id="add">+</button>
+            <button id="decimal">.</button>
             <button id="equal">=</button>
         </div>
     </div>
