Add keyboard input funtionality     * still need to error handling and check for bugs

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <button class="operation" id="log">log</button>
             
             <!-- 3rd row -->
-            <button class="operation" id="exponent">x&#x02B8;</button>
+            <button class="operation" id="power">x&#x02B8;</button>
             <button class="operation" id="factorial">x!</button>
             <button class="operation" id="squareroot">&Sqrt;</button>
             <button class="operation" id="divide">÷</button>
