Add Final touches     *Add gamma function to calculate factorials to allow for decimals     *Change factorial of decimals accuracy to two decimal places     *Change error handling messages to be more user friendly     *change calc-grid padding to 20px     *Fix bugs with keyboard input of polarity (+/-)     *Add keyboard input functionality for 'power of' button (xʸ)

--- a/index.html
+++ b/index.html
@@ -38,26 +38,26 @@
             <button class="operation" id="divide">÷</button>
 
             <!-- 4th row -->
-            <button class="number" data-key="55" data-number>7</button>
-            <button class="number" data-key="56">8</button>
-            <button class="number" data-key="57">9</button>
+            <button class="number" data-number>7</button>
+            <button class="number">8</button>
+            <button class="number">9</button>
             <button class="operation" id="multiply">x</button>
   
             <!-- 5th row -->
-            <button class="number" data-key="52">4</button>
-            <button class="number" data-key="53">5</button>
-            <button class="number" data-key="54">6</button>
+            <button class="number">4</button>
+            <button class="number">5</button>
+            <button class="number">6</button>
             <button class="operation" id="add">+</button>
   
             <!-- 6th row -->
-            <button class="number" data-key="49">1</button>
-            <button class="number"data-key="50">2</button>
-            <button class="number"data-key="51">3</button>
+            <button class="number">1</button>
+            <button class="number">2</button>
+            <button class="number">3</button>
             <button class="operation" id="subtract">-</button>
  
             <!-- 7th row -->
             <button id="polarity">+/-</button>
-            <button class="number" data-key="48">0</button>
+            <button class="number">0</button>
             <button id="decimal">.</button>
             <button id="equal">=</button>
         </div>
